cabal-version:  1.12
name:           hostgroup
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/hostgroup#readme>
homepage:       https://github.com/nbloomf/hostgroup#readme
bug-reports:    https://github.com/nbloomf/hostgroup/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        GPL-3
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/nbloomf/hostgroup

executable hostman
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5

test-suite hostgroup-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
